--- a/index.html
+++ b/index.html
@@ -1,5 +1,10 @@
 ---
-layout: home
+layout: page
 title: Radke Orchards
 subtitle: Since 1894 - A memorable apple picking experience
+cover-img: ['/assets/img/Orchard-Intro-Video-Apples-1.webm','/assets/img/Orchard-Intro-Video-Fly-Over-1.webm']
 ---
+{: .box-success}
+This is a DEV version of the new Radke Orchards site.
+
+![]
